BC-7477 Fix double scroll bar on board (#3590)

--- a/src/styles/css-variables/_sizes.scss
+++ b/src/styles/css-variables/_sizes.scss
@@ -10,6 +10,6 @@
 	--sidebar-width-tablet: 60px;
 	--sidebar-item-height: 60px;
 	--sidebar-sub-item-height: 40px;
-	--topbar-height: 50px;
+	--legacy-topbar-height: 50px;
 	--content-max-width-vw: 100vw;
 }
